Defined signatures of new API endpoints
