# application/models/__init__.py
@@ -3,5 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from application.models.request import Request
-from application.models.response import Response
+from application.models.prioritized_recommendations_request import PrioritizedRecommendationsRequest
+from application.models.prioritized_recommendations_response import PrioritizedRecommendationsResponse
