# application/models/chart_response.py
@@ -1,19 +1,18 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from typing import List  # noqa: F401
 from application.models.base_model_ import Model
 from application.util import util
 
 
-class ResponseChart(Model):
+class ChartResponse(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, error: bool=True, errorMessage: str=None, url: str=None):  # noqa: E501
-        """Requirement - a model defined in Swagger
+        """ChartResponse - a model defined in Swagger
 
         :param error: Indicates whether an error occurred or not.  # noqa: E501
         :type error: bool
