# application/models/defer_requirement_request.py
@@ -6,14 +6,15 @@ from application.models.base_model_ import Model
 from application.util import util
 
 
-class Request(Model):
+class DeferRequirementRequest(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
-    def __init__(self, assignee: str=None, components: List[str]=None, products: List[str]=None, keywords: List[str]=None):  # noqa: E501
-        """Requirement - a model defined in Swagger
+    def __init__(self, id: int=0, agent_id: str=None, interval: int=0, assignee: str=None,
+                 components: List[str]=None, products: List[str]=None, keywords: List[str]=None):  # noqa: E501
+        """DeferRequirementRequest - a model defined in Swagger
 
         :param assignee: The email address of the assignee.  # noqa: E501
         :type assignee: str
@@ -25,6 +26,9 @@ class Request(Model):
         :type keywords: List[str]
         """
         self.swagger_types = {
+            'id': int,
+            'agent_id': str,
+            'interval': int,
             'assignee': str,
             'components': list,
             'products': list,
@@ -32,19 +36,25 @@ class Request(Model):
         }
 
         self.attribute_map = {
+            'id': 'id',
+            'agent_id': 'agent_id',
+            'interval': 'interval',
             'assignee': 'assignee',
             'components': 'components',
             'products': 'products',
             'keywords': 'keywords'
         }
 
+        self._id = id
+        self._agent_id = agent_id
+        self._interval = interval
         self._assignee = assignee
         self._components = components
         self._products = products
         self._keywords = keywords
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Request':
+    def from_dict(cls, dikt) -> 'DeferRequirementRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
@@ -54,8 +64,68 @@ class Request(Model):
         """
         return util.deserialize_model(dikt, cls)
 
-    def unique_key(self):
-        return "{}_#_{}_#_{}_#_{}".format(self.assignee, set(self.components), set(self.products), set(self.keywords))
+    @property
+    def id(self) -> int:
+        """Gets the ID of the issue.
+
+
+        :return: The ID of the issue.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, ID: int):
+        """Sets the ID of the issue.
+
+
+        :param ID: The ID of the issue.
+        :type ID: int
+        """
+
+        self._id = ID
+
+    @property
+    def agent_id(self) -> str:
+        """Gets the agent ID.
+
+
+        :return: The agent ID.
+        :rtype: str
+        """
+        return self._agent_id
+
+    @agent_id.setter
+    def agent_id(self, agent_id: int):
+        """Sets the agent ID.
+
+
+        :param ID: The agent ID.
+        :type ID: int
+        """
+
+        self._agent_id = agent_id
+
+    @property
+    def interval(self) -> str:
+        """Gets the interval.
+
+
+        :return: The interval.
+        :rtype: int
+        """
+        return self._interval
+
+    @interval.setter
+    def interval(self, interval: int):
+        """Sets the interval.
+
+
+        :param ID: The interval.
+        :type ID: int
+        """
+
+        self._interval = interval
 
     @property
     def assignee(self) -> str:
