# application/models/like_requirement_response.py
@@ -1,0 +1,85 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from application.models.base_model_ import Model
+from application.util import util
+
+
+class LikeRequirementResponse(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, error: bool=True, errorMessage: str=None):  # noqa: E501
+        """LikeRequirementResponse - a model defined in Swagger
+
+        :param error: Indicates whether an error occurred or not.  # noqa: E501
+        :type error: bool
+        :param errorMessage: The error message.  # noqa: E501
+        """
+        self.swagger_types = {
+            'error': bool,
+            'errorMessage': str
+        }
+
+        self.attribute_map = {
+            'error': 'error',
+            'errorMessage': 'errorMessage'
+        }
+
+        self._error = error
+        self._errorMessage = errorMessage
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'LikeRequirementResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Response.  # noqa: E501
+        :rtype: LikeRequirementResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def error(self) -> bool:
+        """Indicates whether an error occurred while processing the request or not.
+
+
+        :return: Indicates whether an error occurred while processing the request or not.
+        :rtype: bool
+        """
+        return self._error
+
+    @error.setter
+    def error(self, error: bool):
+        """Sets the error.
+
+
+        :param error: The error.
+        :type error: bool
+        """
+
+        self._error = error
+
+    @property
+    def errorMessage(self) -> str:
+        """Gets the error message.
+
+
+        :return: The error message.
+        :rtype: str
+        """
+        return self._errorMessage
+
+    @errorMessage.setter
+    def errorMessage(self, errorMessage: str):
+        """Sets the components.
+
+
+        :param errorMessage: The error message attribute.
+        :type errorMessage: str
+        """
+
+        self._errorMessage = errorMessage
