# application/models/prioritized_recommendations_response.py
@@ -1,19 +1,18 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from typing import List  # noqa: F401
 from application.models.base_model_ import Model
 from application.util import util
 
 
-class Response(Model):
+class PrioritizedRecommendationsResponse(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, error: bool=True, errorMessage: str=None, rankedBugs: [dict]=None):  # noqa: E501
-        """Requirement - a model defined in Swagger
+        """PrioritizedRecommendationsResponse - a model defined in Swagger
 
         :param error: Indicates whether an error occurred or not.  # noqa: E501
         :type error: bool
@@ -36,13 +35,13 @@ class Response(Model):
         self._rankedBugs = rankedBugs
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Response':
+    def from_dict(cls, dikt) -> 'PrioritizedRecommendationsResponse':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
         :return: The Response.  # noqa: E501
-        :rtype: Response
+        :rtype: PrioritizedRecommendationsResponse
         """
         return util.deserialize_model(dikt, cls)
 
